@@ -19,7 +19,7 @@ CXXFLAGS = \
            $(EXTRA_FLAGS) \
            $(CGAL_CXXFLAGS) \
            -Iinclude \
-           $(LONG_NAME_PROBLEM_CXXFLAGS)
+           $(LONG_NAME_PROBLEM_CXXFLAGS) -W
 
 #---------------------------------------------------------------------#
 #                    linker flags
